--- a/src/assets/scss/section/channel.scss
+++ b/src/assets/scss/section/channel.scss
@@ -3,7 +3,10 @@
     height: 300px;
     background-color: #ccc;
     padding-top: 100px;
+    position: relative;
     background-position: center;
+    // background-repeat: no-repeat;
+    background-size: contain;
 
     .circle {
         width: 200px;
@@ -13,10 +16,57 @@
         background-color: #ccc;
         position: absolute;
         left: 50%;
-        top: 280px;
+        top: 200px;
         transform: translate(-50%);
         z-index: 100;
     }
 }
 
-.channel__inner {}
+.channel__info {
+    margin-top: 100px;
+    text-align: center;
+
+    .title {
+        margin-bottom: 10px;
+        font-size: 2rem;
+    }
+
+    .desc {
+        padding: 0 10vw;
+    }
+
+    .info {
+        margin-top: 30px;
+
+        span {
+            background-color: #a6a6a631;
+            padding: 10px 20px;
+            border-radius: 40px;
+            margin: 4px;
+
+            svg {
+                width: 20px;
+                height: 20px;
+                vertical-align: -5px;
+                margin-right: 5px;
+            }
+        }
+    }
+}
+
+.channel__video {
+    margin-top: 100px;
+    padding: 2rem 2rem 3rem 2rem;
+}
+
+.channel__more {
+    text-align: center;
+
+    button {
+        padding: 10px 20px;
+        background-color: #ccc;
+        border-radius: 50px;
+        margin-bottom: 30px;
+        cursor: pointer;
+    }
+}
