--- a/src/assets/scss/setting/common.scss
+++ b/src/assets/scss/setting/common.scss
@@ -74,15 +74,17 @@ body {
 
 
 .fade-in {
-    animation: fadeIn 1s ease-in;
+    animation: fadeIn 0.5s ease-in;
 }
 
 @keyframes fadeIn {
     from {
         opacity: 0;
+        margin-top: 10px;
     }
 
     to {
         opacity: 100;
+        margin-top: 0;
     }
 }
