--- a/src/assets/scss/section/header.scss
+++ b/src/assets/scss/section/header.scss
@@ -47,7 +47,7 @@
             border-radius: 2px;
             transition: all 0.3s;
             color: #ffffff;
-            background-color: #9c9c9c;
+            background-color: #6393b3de;
 
             a {
                 font-size: 1rem;
@@ -86,12 +86,12 @@
             a {
                 display: inline-block;
                 padding: 5px 15px;
-                border: 1px solid #ffffff;
+                border: 1px solid #4d4d4d;
                 font-size: 1rem;
                 border-radius: 5px;
                 margin: 3px 3px;
                 transition: all 0.3s;
-                color: #ffffff;
+                color: #000000;
             }
         }
     }
