--- a/src/assets/scss/setting/fonts.scss
+++ b/src/assets/scss/setting/fonts.scss
@@ -1,4 +1,11 @@
 @font-face {
+    font-family: 'Bazzi';
+    src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/Bazzi.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: "nexonLv1";
     font-weight: 100;
     font-style: normal;
