--- a/src/assets/scss/setting/vars.scss
+++ b/src/assets/scss/setting/vars.scss
@@ -1,5 +1,5 @@
 :root {
-    --mainfont-nanum: "nanumSquareNeo";
+    --mainfont-nanum: "Bazzi";
     --mainfont-nexon: "nexonLv1";
 
     --black: #000;
