--- a/src/assets/scss/section/layout.scss
+++ b/src/assets/scss/section/layout.scss
@@ -5,21 +5,46 @@
     width: 260px;
     height: 100%;
     z-index: 10000;
-    background-color: #272727;
+    background-color: #c7ffff66;
 }
 
 #main {
-    max-width: 2000px;
-    min-height: 100vh;
+    max-width: 3000px;
+    min-height: calc(100vh - 64px);
     margin: 0 auto;
     padding-left: 260px;
-    background-color: #585858;
+    background-color: #969696;
     position: relative;
+    background-image: url(../../img/main.jpg);
+    background-size: cover;
+
+    .main-text {
+        margin: 0 auto;
+        width: 700px;
+        color: #102133;
+        text-align: center;
+        margin-top: 100px;
+        font-size: 8rem;
+
+        h1 {
+            text-align: left;
+            font-size: 8rem;
+        }
+
+        p {
+            text-align: right;
+        }
+    }
+
 }
+
+
+
 
 #footer {
     text-align: center;
-    background-color: #222;
+    background-color: rgba(199, 255, 255, 0.733);
+    backdrop-filter: blur(10px);
     padding: 20px 20px 20px 260px;
 }
 
