--- a/src/assets/scss/section/search.scss
+++ b/src/assets/scss/section/search.scss
@@ -1,10 +1,15 @@
+#search {
+    display: flex;
+    justify-content: center;
+}
+
 .search__inner {
     position: relative;
     width: 100%;
     height: 80px;
     padding: 17px 40px;
-    border-bottom: 1px solid var(--black100);
-    background-color: #2121217a;
+    border-bottom: 1px solid var(--white);
+    background-color: rgba(199, 255, 255, 0.4);
     backdrop-filter: blur(10px);
 
     label {
@@ -18,11 +23,15 @@
     }
 
     input {
-        background-color: var(--black100);
-        border: 1px solid var(--black100);
+        background-color: var(--white);
+        border: 1px solid var(--white);
         width: 100%;
+        margin: 0 auto;
         padding: 14px 45px;
-        color: var(--white);
+        color: var(--black);
+        border-radius: 30px;
+        border: none;
+        outline: none;
     }
 }
 
