--- a/src/assets/scss/section/layout.scss
+++ b/src/assets/scss/section/layout.scss
@@ -21,19 +21,16 @@
     .main-text {
         margin: 0 auto;
         width: 700px;
-        color: #102133;
+        color: #1d75d3;
         text-align: center;
         margin-top: 100px;
         font-size: 8rem;
 
         h1 {
-            text-align: left;
+
             font-size: 8rem;
         }
 
-        p {
-            text-align: right;
-        }
     }
 
 }
