--- a/src/assets/scss/section/search.scss
+++ b/src/assets/scss/section/search.scss
@@ -9,7 +9,7 @@
     height: 80px;
     padding: 17px 40px;
     border-bottom: 1px solid var(--white);
-    background-color: rgba(199, 255, 255, 0.4);
+    background-color: #ad7d4b;
     backdrop-filter: blur(10px);
 
     label {
