--- a/src/assets/scss/setting/resets.scss
+++ b/src/assets/scss/setting/resets.scss
@@ -110,8 +110,8 @@ select {
     z-index: 100000;
     font-size: 1rem;
     padding: 10px 30px;
-    color: var(--white);
-    background: var(--black);
+    color: var(--black);
+    background: var(--white);
 }
 
 #skip a:focus,
