--- a/src/assets/scss/section/layout.scss
+++ b/src/assets/scss/section/layout.scss
@@ -5,7 +5,7 @@
     width: 260px;
     height: 100%;
     z-index: 10000;
-    background-color: #c7ffff66;
+    background-color: #D4A373;
 }
 
 #main {
@@ -13,36 +13,68 @@
     min-height: calc(100vh - 64px);
     margin: 0 auto;
     padding-left: 260px;
-    background-color: #969696;
+    background-color: #FEFAE0;
     position: relative;
-    background-image: url(../../img/main.jpg);
-    background-size: cover;
-
-    .main-text {
-        margin: 0 auto;
-        width: 700px;
-        color: #1d75d3;
-        text-align: center;
-        margin-top: 100px;
-        font-size: 8rem;
-
-        h1 {
-
-            font-size: 8rem;
-        }
-
-    }
-
+    background-image: url(../../img/banner.png);
+}
+.home__title {
+    margin-top: 300px;
+    border-radius: 50px;
+    text-align: center;
+    padding: 20px;
 }
 
+.home__title h2 {
+    color: #3b2406;
+    font-size: 7rem;
+    margin: 10px 0;
+}
 
+.home__search {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-top: 20px;
+}
+.home__box{
+    width: 400px;
+    height: 200px;
+    background-color: #D4A373;
+    border-radius: 10px;
+    h2{
+        color: #3b2406;
+        font-size:2rem;
+        padding: 10px;
+    }
+    a{
+        font-size: 1rem;
+        color: #3b2406;
+        padding: 10px 20px;
+        background-color: #f7d9ac;
+    }
+    p{
+        font-size: 1.2rem;
+        color:#616161;
+    }
+}
 
-
+.search-link {
+    font-size: 1.5rem;
+    margin: 20px;
+    padding: 10px 20px;
+    display: inline-block;
+    border-radius: 5px;
+   &:hover{
+    background-color: #9c6318;
+    color: #fff;
+   }
+}
 #footer {
     text-align: center;
-    background-color: rgba(199, 255, 255, 0.733);
+    background-color: #ad7d4b;
     backdrop-filter: blur(10px);
     padding: 20px 20px 20px 260px;
+    color: #000;
 }
 
 #Spring,
