--- a/src/assets/scss/setting/common.scss
+++ b/src/assets/scss/setting/common.scss
@@ -1,6 +1,6 @@
 body {
-    background-color: var(--white);
-    color: var(--black);
+    background-color: var(--black);
+    color: var(--white);
 }
 
 #searchPage {
