--- a/src/assets/scss/section/layout.scss
+++ b/src/assets/scss/section/layout.scss
@@ -17,8 +17,9 @@
     position: relative;
     background-image: url(../../img/banner.png);
 }
+
 .home__title {
-    margin-top: 300px;
+    margin-top: 200px;
     border-radius: 50px;
     text-align: center;
     padding: 20px;
@@ -32,44 +33,70 @@
 
 .home__search {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 250px;
     gap: 30px;
+    margin-bottom: 20px;
+    padding: 20px;
 }
-.home__box{
-    width: 400px;
+
+.home__box {
+    width: 32%;
     height: 200px;
     background-color: #D4A373;
     border-radius: 10px;
-    h2{
-        color: #3b2406;
-        font-size:2rem;
+
+    h2 {
+        color: #ffffff;
+        font-size: 3rem;
         padding: 10px;
     }
-    a{
+
+    a {
         font-size: 1rem;
         color: #3b2406;
         padding: 10px 20px;
         background-color: #f7d9ac;
     }
-    p{
+
+    p {
         font-size: 1.2rem;
-        color:#313131;
+        color: #313131;
     }
 }
 
 .search-link {
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     margin: 20px;
     padding: 10px 20px;
     display: inline-block;
     border-radius: 5px;
-   &:hover{
-    background-color: #9c6318;
-    color: #fff;
-   }
+
+    &:hover {
+        background-color: #9c6318;
+        color: #fff;
+    }
 }
+
+#videoViewPage {
+    padding: 20px;
+
+    h2 {
+        color: #000;
+    }
+}
+
+.video__title {
+    display: flex;
+    justify-content: space-between;
+
+    .more-link {
+        font-size: 1.2rem;
+        color: #000;
+    }
+}
+
 #footer {
     text-align: center;
     background-color: #ad7d4b;
