--- a/src/assets/scss/section/channel.scss
+++ b/src/assets/scss/section/channel.scss
@@ -1,72 +1,73 @@
 .channel__header {
-    width: 100%;
-    height: 300px;
-    background-color: #ccc;
-    padding-top: 100px;
-    position: relative;
-    background-position: center;
-    // background-repeat: no-repeat;
-    background-size: contain;
+  width: 100%;
+  height: 300px;
+  background-color: #ccc;
+  padding-top: 100px;
+  position: relative;
+  background-position: center;
+  // background-repeat: no-repeat;
+  background-size: contain;
 
-    .circle {
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        overflow: hidden;
-        background-color: #ccc;
-        position: absolute;
-        left: 50%;
-        top: 200px;
-        transform: translate(-50%);
-        z-index: 100;
-    }
+  .circle {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    background-color: #ccc;
+    position: absolute;
+    left: 50%;
+    top: 200px;
+    transform: translate(-50%);
+    z-index: 100;
+  }
 }
 
 .channel__info {
-    margin-top: 100px;
-    text-align: center;
+  margin-top: 100px;
+  color: var(--black);
+  text-align: center;
 
-    .title {
-        margin-bottom: 10px;
-        font-size: 2rem;
+  .title {
+    margin-bottom: 10px;
+    font-size: 2rem;
+  }
+
+  .desc {
+    padding: 0 10vw;
+  }
+
+  .info {
+    margin-top: 30px;
+
+    span {
+      background-color: #a6a6a631;
+      padding: 10px 20px;
+      border-radius: 40px;
+      margin: 4px;
+
+      svg {
+        width: 20px;
+        height: 20px;
+        vertical-align: -5px;
+        margin-right: 5px;
+      }
     }
-
-    .desc {
-        padding: 0 10vw;
-    }
-
-    .info {
-        margin-top: 30px;
-
-        span {
-            background-color: #a6a6a631;
-            padding: 10px 20px;
-            border-radius: 40px;
-            margin: 4px;
-
-            svg {
-                width: 20px;
-                height: 20px;
-                vertical-align: -5px;
-                margin-right: 5px;
-            }
-        }
-    }
+  }
 }
 
 .channel__video {
-    margin-top: 100px;
-    padding: 2rem 2rem 3rem 2rem;
+  margin-top: 100px;
+  padding: 2rem 2rem 3rem 2rem;
 }
 
 .channel__more {
-    text-align: center;
+  text-align: center;
 
-    button {
-        padding: 10px 20px;
-        background-color: #ccc;
-        border-radius: 50px;
-        margin-bottom: 30px;
-        cursor: pointer;
-    }
+  button {
+    padding: 10px 20px;
+    background-color: rgba(166, 166, 166, 0.1921568627);
+    border-radius: 50px;
+    margin-bottom: 30px;
+    cursor: pointer;
+  }
 }
