--- a/src/assets/scss/section/layout.scss
+++ b/src/assets/scss/section/layout.scss
@@ -1,108 +1,106 @@
 #header {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 260px;
-    height: 100%;
-    z-index: 10000;
-    background-color: #D4A373;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 260px;
+  height: 100%;
+  z-index: 10000;
+  background-color: #d4a373;
 }
 
 #main {
-    max-width: 3000px;
-    min-height: calc(100vh - 64px);
-    margin: 0 auto;
-    padding-left: 260px;
-    background-color: #FEFAE0;
-    position: relative;
-    background-image: url(../../img/banner.png);
+  max-width: 3000px;
+  min-height: calc(100vh - 64px);
+  margin: 0 auto;
+  padding-left: 260px;
+  background-color: #fefae0;
+  position: relative;
+  background-image: url(../../img/main1.png);
+  background-size: contain;
 }
 
 .home__title {
-    margin-top: 200px;
-    border-radius: 50px;
-    text-align: center;
-    padding: 20px;
+  border-radius: 50px;
+  padding: 0 20px;
+  text-align: center;
 }
 
+.home__cont {
+  display: flex;
+}
 .home__title h2 {
-    color: #3b2406;
-    font-size: 7rem;
-    margin: 10px 0;
+  font-family: "GmarketSans";
+  font-weight: 200;
+  color: #000000;
+  font-size: 7rem;
+  margin: 10px 0;
 }
 
 .home__search {
-    display: flex;
-    justify-content: space-between;
-    text-align: center;
-    margin-top: 200px;
-    gap: 30px;
-    margin-bottom: 20px;
-    padding: 20px;
+  gap: 30px;
 }
 
 .home__box {
-    width: 32%;
-    height: 200px;
-    background-color: #D4A373;
-    border-radius: 10px;
+  width: 32%;
+  height: 200px;
+  border-radius: 10px;
 
-    h2 {
-        color: #ffffff;
-        font-size: 3rem;
-        padding: 10px;
-    }
+  h2 {
+    color: #000000;
+    font-size: 3rem;
+    padding: 10px;
+  }
 
-    a {
-        font-size: 1rem;
-        color: #3b2406;
-        padding: 10px 20px;
-        background-color: #f7d9ac;
-    }
+  a {
+    font-size: 1rem;
+    color: #3b2406;
+    padding: 10px 20px;
+    background-color: #f7d9ac;
+  }
 
-    p {
-        font-size: 1.2rem;
-        color: #313131;
-    }
+  p {
+    font-size: 1.2rem;
+    color: #141414;
+  }
 }
 
 .search-link {
-    font-size: 1.2rem;
-    margin: 20px;
-    padding: 10px 20px;
-    display: inline-block;
-    border-radius: 5px;
+  font-size: 1.2rem;
+  margin: 20px;
+  padding: 10px 20px;
+  display: inline-block;
+  border-radius: 5px;
 
-    &:hover {
-        background-color: #9c6318;
-        color: #fff;
-    }
+  &:hover {
+    background-color: #9c6318;
+    color: #fff;
+  }
 }
 
 #videoViewPage {
-    padding: 20px;
+  padding: 0 20px;
 
-    h2 {
-        color: #000;
-    }
+  h2 {
+    color: #ffffff;
+  }
 }
 
 .video__title {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 
-    .more-link {
-        font-size: 1.2rem;
-        color: #000;
-    }
+  .more-link {
+    font-size: 1.2rem;
+    color: #000;
+  }
 }
 
 #footer {
-    text-align: center;
-    background-color: #ad7d4b;
-    backdrop-filter: blur(10px);
-    padding: 20px 20px 20px 260px;
-    color: #000;
+  text-align: center;
+  background-color: #ad7d4b;
+  backdrop-filter: blur(10px);
+  padding: 20px 20px 20px 260px;
+  color: #000;
 }
 
 #Spring,
@@ -114,26 +112,26 @@
 #Rainning,
 #Rainning,
 #Traval {
-    padding: 20px;
+  padding: 20px;
 
-    h2 {
-        margin-bottom: 0.6rem;
-        font-size: 1.25rem;
-    }
+  h2 {
+    margin-bottom: 0.6rem;
+    font-size: 1.25rem;
+  }
 }
 
-@media(max-width:960px) {
-    #header {
-        left: -260px;
-    }
+@media (max-width: 960px) {
+  #header {
+    left: -260px;
+  }
 
-    #main {
-        padding-left: 0;
-        margin-top: 80px;
-    }
+  #main {
+    padding-left: 0;
+    margin-top: 80px;
+  }
 
-    #footer {
-        left: -260px;
-        padding-left: 0;
-    }
+  #footer {
+    left: -260px;
+    padding-left: 0;
+  }
 }
