--- a/src/assets/scss/section/video.scss
+++ b/src/assets/scss/section/video.scss
@@ -1,158 +1,159 @@
 // 비디오 페이지
 .video__inner {
-    display: grid;
-    grid-template-columns: repeat(4, 24%);
-    justify-content: space-between;
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, 24%);
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 20px;
 
-    @media (max-width: 1400px) {
-        grid-template-columns: repeat(3, 32%);
-        gap: 15px;
+  @media (max-width: 1400px) {
+    grid-template-columns: repeat(3, 32%);
+    gap: 15px;
+  }
+
+  @media (max-width: 1200px) {
+    grid-template-columns: repeat(2, 49%);
+    gap: 10px;
+  }
+
+  @media (max-width: 400px) {
+    grid-template-columns: repeat(1, 100%);
+  }
+
+  .video {
+    .video__thumb {
+      a {
+        display: block;
+        width: 100%;
+        padding-bottom: 56.25%;
+        background-size: cover;
+        background-position: center center;
+      }
     }
 
-    @media (max-width: 1200px) {
-        grid-template-columns: repeat(2, 49%);
-        gap: 10px;
-    }
+    .video__info {
+      background-color: #d4a373;
+      padding: 1rem;
 
-    @media (max-width: 400px) {
-        grid-template-columns: repeat(1, 100%);
-    }
+      .title {
+        @include line-two;
+        min-height: 48px;
 
-    .video {
-        .video__thumb {
-            a {
-                display: block;
-                width: 100%;
-                padding-bottom: 56.25%;
-                background-size: cover;
-                background-position: center center;
-            }
+        @media (max-width: 800px) {
+          min-height: 40px;
         }
+      }
 
-        .video__info {
-            background-color: #222;
-            padding: 1rem;
-
-            .title {
-                @include line-two;
-                min-height: 48px;
-
-                @media (max-width: 800px) {
-                    min-height: 40px;
-                }
-            }
-
-            .author {
-                a {
-                    background-color: #fff;
-                    border-radius: 20px;
-                    color: #222;
-                    font-size: 12px;
-                    padding: 1px 10px;
-                    text-transform: uppercase;
-                    margin-top: 10px;
-                    display: inline-block;
-                }
-            }
+      .author {
+        a {
+          background-color: #fff;
+          border-radius: 20px;
+          color: #222;
+          font-size: 12px;
+          padding: 1px 10px;
+          text-transform: uppercase;
+          margin-top: 10px;
+          display: inline-block;
         }
+      }
     }
+  }
 }
 
 // 메인 페이지 비디오 슬라이드
 .video__slider {
-    .video {
-        .video__thumb {
-            margin-bottom: 5px;
-        }
-
-        .video__text {
-            overflow: hidden;
-            text-overflow: ellipsis;
-            display: -webkit-box;
-            -webkit-line-clamp: 2;
-            -webkit-box-orient: vertical;
-        }
+  .video {
+    .video__thumb {
+      margin-bottom: 5px;
     }
+
+    .video__text {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+    }
+  }
 }
 
 // 비디오 상세 페이지
 .video__detail {
-    padding: 2rem;
+  padding: 2rem;
 
-    .video__play {
-        margin-bottom: 1rem;
-        width: 100%;
-        display: flex;
-        justify-content: space-between;
-        align-items: stretch;
+  .video__play {
+    margin-bottom: 1rem;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
 
-        .left {
-            width: 100%;
-            position: relative;
-            height: 0;
-        }
-
-        .right {
-            width: 350px;
-            background-color: #3d3d3d;
-            padding: 1rem;
-            max-height: 70vh;
-            overflow-y: auto;
-
-
-            h3 {
-                background-color: var(--white);
-                color: var(--black);
-                padding: 1px 1px;
-                border-radius: 40px;
-                text-align: center;
-                margin-bottom: 0.5rem;
-                font-size: 1rem;
-            }
-
-            li {
-                margin-bottom: 15px;
-                border-bottom: 1px dashed var(--white300);
-                padding-bottom: 10px;
-            }
-        }
+    .left {
+      width: 100%;
+      position: relative;
+      height: 0;
     }
 
-    .video__info {
-        .title {
-            font-size: 1.25rem;
-            margin-bottom: 1rem;
-        }
+    .right {
+      width: 350px;
+      background-color: #d4a373;
+      padding: 1rem;
+      max-height: 70vh;
+      overflow-y: auto;
 
-        .channel {
-            display: flex;
-            justify-content: space-between;
-            background-color: #111;
-            padding: 1rem 2rem;
-            border-radius: 40px;
-            margin-bottom: 1rem;
+      h3 {
+        background-color: var(--white);
+        color: var(--black);
+        padding: 1px 1px;
+        border-radius: 40px;
+        text-align: center;
+        margin-bottom: 0.5rem;
+        font-size: 1rem;
+      }
 
-            span {
-                margin-left: 10px;
+      li {
+        margin-bottom: 15px;
+        border-bottom: 1px dashed var(--white300);
+        padding-bottom: 10px;
+      }
+    }
+  }
 
-                svg {
-                    width: 20px;
-                    height: 20px;
-                    vertical-align: -5px;
-                    margin-right: 5px;
-                }
-            }
-
-            .channelTitle {
-                font-size: 1rem;
-                font-weight: bold;
-            }
-        }
+  .video__info {
+    .title {
+      color: #000;
+      font-size: 1.25rem;
+      margin-bottom: 1rem;
     }
 
-    .video__desc {
-        white-space: pre-line;
-        line-height: 1.8;
+    .channel {
+      display: flex;
+      justify-content: space-between;
+      background-color: #d4a373;
+      padding: 1rem 2rem;
+      border-radius: 40px;
+      margin-bottom: 1rem;
+
+      span {
+        margin-left: 10px;
+
+        svg {
+          width: 20px;
+          height: 20px;
+          vertical-align: -5px;
+          margin-right: 5px;
+        }
+      }
+
+      .channelTitle {
+        font-size: 1rem;
+        font-weight: bold;
+      }
     }
+  }
+
+  .video__desc {
+    white-space: pre-line;
+    line-height: 1.8;
+  }
 }
