--- a/src/assets/scss/setting/common.scss
+++ b/src/assets/scss/setting/common.scss
@@ -1,90 +1,89 @@
 body {
-    background-color: var(--black);
-    color: var(--white);
+  background-color: var(--black);
+  color: var(--black);
 }
 
 #searchPage {
-    padding: 2rem;
+  padding: 2rem;
 
-    h2 {
-        margin-bottom: 0.8rem;
-        font-size: 1.25rem;
-        position: relative;
-        z-index: 10;
+  h2 {
+    margin-bottom: 0.8rem;
+    font-size: 1.25rem;
+    position: relative;
+    z-index: 10;
 
-        em {
-            position: relative;
+    em {
+      position: relative;
 
-            &::before {
-                content: '';
-                width: 100%;
-                height: 10px;
-                background-color: rgba(255, 0, 0, 0.832);
-                position: absolute;
-                left: 0;
-                bottom: 0;
-                z-index: -1;
-                border-radius: 10px;
-            }
-        }
+      &::before {
+        content: "";
+        width: 100%;
+        height: 10px;
+        background-color: rgba(255, 0, 0, 0.832);
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+        border-radius: 10px;
+      }
     }
+  }
 }
 
 .play__icon {
-    a {
-        position: relative;
-        display: block;
-        cursor: pointer;
-        width: 100%;
+  a {
+    position: relative;
+    display: block;
+    cursor: pointer;
+    width: 100%;
 
-        &::before {
-            content: '';
-            width: 100%;
-            height: 100%;
-            background-color: #00000000;
-            position: absolute;
-            left: 0;
-            top: 0;
-            transition: background-color 0.3s;
-        }
-
-        &:hover::before {
-            background-color: #0000004d;
-        }
-
-        &::after {
-            content: '';
-            width: 80px;
-            height: 80px;
-            background: #0000008c url(../../img/icon/play.svg) no-repeat center;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            border-radius: 50%;
-            opacity: 0;
-            transition: opacity 0.3s;
-        }
-
-        &:hover::after {
-            opacity: 1;
-        }
+    &::before {
+      content: "";
+      width: 100%;
+      height: 100%;
+      background-color: #00000000;
+      position: absolute;
+      left: 0;
+      top: 0;
+      transition: background-color 0.3s;
     }
+
+    &:hover::before {
+      background-color: #0000004d;
+    }
+
+    &::after {
+      content: "";
+      width: 80px;
+      height: 80px;
+      background: #0000008c url(../../img/icon/play.svg) no-repeat center;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      opacity: 0;
+      transition: opacity 0.3s;
+    }
+
+    &:hover::after {
+      opacity: 1;
+    }
+  }
 }
 
-
 .fade-in {
-    animation: fadeIn 0.5s ease-in;
+  animation: fadeIn 0.5s ease-in;
 }
 
 @keyframes fadeIn {
-    from {
-        opacity: 0;
-        margin-top: 10px;
-    }
+  from {
+    opacity: 0;
+    margin-top: 10px;
+  }
 
-    to {
-        opacity: 100;
-        margin-top: 0;
-    }
+  to {
+    opacity: 100;
+    margin-top: 0;
+  }
 }
